@@ -2,6 +2,7 @@ Revision history for DBIx-Class-Migration.
 
 0.063   
         - pass on dbic_connect_attrs even if no dsn - thanks @abeverley for report
+        - handle SQL keywords in identifiers - thanks @ikapelyukhin for report
 
 0.062   2019-02-25
         - update DBIx::Class::DeploymentHandler dep to 0.002222 - thanks @KES777 for report
